--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content modal-lg">
         <div class="modal-header">
-          <h3 class="modal-title">Reserve a Campsite</h3>
+          <h3 class="modal-title">ask Russell</h3>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body modal-lg">
